# cpp_engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  codebase_dump.txt  combine.py  ideas.txt
engine/: README.md
engine/include/behaviour/: behaviourtree.h  btagent.h
engine/include/core/: behaviourtree.h  gameobject.h  spatialgrid.h  threadpool.h  typeid.h  world.h
engine/include/logger/: logger.h  profiler.h
engine/include/memory/: binnedallocator.h  memorypool.h
engine/include/network/: client.h  server.h
engine/src/behaviour/: behaviourtree.cpp
engine/src/core/: spatialgrid.cpp  threadpool.cpp  world.cpp
engine/src/logger/: logger.cpp
engine/src/memory/: binnedallocator.cpp  memorypool.cpp
engine/src/network/: client.cpp  server.cpp
games/ants/: README.md
games/ants/include/: ant.h  food.h  nest.h  pheromonegrid.h  predator.h  predator_nodes.h
games/ants/src/: ant.cpp  main.cpp  nest.cpp  pheromonegrid.cpp  predator_nodes.cpp
games/rts/: README.md
games/rts/include/: unit.h  unitmanager.h
games/rts/server/: main.cpp
games/rts/src/: main.cpp  unit.cpp  unitmanager.cpp
tests/: main.cpp
